# fasttalk-stt-microservice

./: .env.example  Dockerfile.cpu  Dockerfile.gpu  docker-compose.apple.yml  docker-compose.cpu.yml  docker-compose.gpu.yml  main.py  pyproject.toml  requirements.txt  run-apple.sh  run-cpu.bat  run-cpu.sh  run-gpu.bat
app/core/: audio_processor.py  audio_stream_processor.py  error_handler.py  microphone_capture.py  realtime_transcription.py  websocket_launcher.py  websocket_server.py  whisper_handler.py
app/monitoring/: monitoring_service.py  service_monitor.py
app/utils/: config.py  error_handler.py  logger.py
